--- a/style.css
+++ b/style.css
@@ -3,10 +3,14 @@
 --cinza-secundario: #C0C0C0;
 --botao-azul: #167BF7;
 --cor-de-fundo: #00030C;
+--fonte-principal:'inter';
 }
 body{
     background-color: var(--cor-de-fundo);
     color: var(--branco-principal);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
 }
 * {
     margin: 0;
@@ -20,11 +24,18 @@ body{
         background-image: url(img/Background.png);
         background-repeat: no-repeat;
         background-size: contain;
+        align-items: center;
+        text-align: center;
         }
         .container {
             height: 100vh;
             display:grid;
             grid-template-columns: 20% 20%;
+            }
+            .container_titulo{
+                font-size: 28px;
+                font-weight: 700;
+                
             }
             .container_botao {
                 background-color: var(--botao-azul);
@@ -32,6 +43,7 @@ body{
                 padding: 1em;
                 color: var(--branco-principal);
                 display: block;
+                text-decoration: none;
                 }
                 .botao_secundario {
                     background-color: transparent;
@@ -40,26 +52,29 @@ body{
                     padding: 1em;
                     display: block;
                 }
-                .secundario_imagem {
-                    width: 180%;
-                 }
-                 .secundario {
-                    align-items: center;
-                    margin:0 10em;
-                 }
-                .descricao__titulo { font-weight: 700;
-                    font-size: 48px;
-                    color:var(--branco-principal);
-                    margin-bottom: 0.1em;
-                }
-                .descricao__texto {
+                .container_aviso{
+                    font-size: 12px;
                     color: var(--cinza-secundario);
                 }
-
-                
-                
-
-
-            
-
-                 
+                .container_caixa{
+                    margin: 0 6em;
+                }
+                .container_imagem{
+                    margin: 1em 0 2em 0;
+                }
+            .secuntario_imagem{
+                width: 40%;
+            }
+            .secundario{
+                align-items: center;
+                margin: 0 10em;
+            }
+            .descricao_titulo{
+                font-weight: 700;
+                font-size: 40px;
+                color: var(--branco-principal);
+                margin-bottom: 0.1em;
+            }
+            .descricao_texto{
+                color: var(--cinza-secundario);
+            }
